--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -20,7 +20,7 @@
 <!--        <a class="p-2 text-dark" href="#">Выход</a>-->
     </nav>
       {% if request.user.is_authenticated %}
-         <a class="btn btn-outline-primary" href="{% url 'user_logout' %}">Выйти</a>
+      <h3>{{ user.username }}</h3>|<a class="btn btn-outline-primary" href="{% url 'user_logout' %}">Выйти</a>
       {% else %}
          <a class="btn btn-outline-primary" href="{% url 'auth_user' %}">Войти</a>
       {% endif %}
