--- a/general/templates/general/update.html
+++ b/general/templates/general/update.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<h1>Создать задачу</h1>
+<h1>Изменить задачу</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.title }}<br>
@@ -12,7 +12,7 @@
     <p>Статус: {{ form.state }}</p><br>
     <p>Дата выполнения: {{ form.time_out }}</p>
     <div>
-     <button type="submit">Добавить задачу</button><br>
+     <button type="submit">Изменить</button><br> <button type="reset">Отмена</button><br>
     </div>
 </form>
 {% endblock %}
