--- a/general/templates/general/history.html
+++ b/general/templates/general/history.html
@@ -1,9 +1,9 @@
 {% extends 'general/base.html' %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}История задач{% endblock %}
 
 {% block content %}
-<h1>Задачи</h1>
+<h1>История задач</h1>
 {% if tasks %}
 <table class="table">
     <thead>
