--- a/general/templates/general/tasks_all.html
+++ b/general/templates/general/tasks_all.html
@@ -36,4 +36,7 @@
     <p>Нет задач</p>1
     {% endif %}
     </tbody>
+    <form action="/history/">
+        <button type="submit">История Задач</button>
+    </form>
     {% endblock %}
