--- a/auth_app/templates/auth_app/registration.html
+++ b/auth_app/templates/auth_app/registration.html
@@ -1,20 +1,28 @@
 {% extends 'general/base.html' %}
 {% block title %} Регистрация {% endblock %}
-<!--    {% if massages %}-->
-<!--      {% for message in messages %}-->
-<!--      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>-->
-<!--      {% endfor %}-->
-<!--    {% endif %}-->
-<!--  {% block content %}-->
+{% block content %}
+{% if messages %}
+    {% for message in messages %}
+    {% if message.tags == 'error' %}
+    <div class="alert alert-danger" role="alert">
+        {{ message }}
+    </div>
+    {% else %}
+    <div class="alert alert-{{ message.tags }}" role="alert">
+        {{ message }}
+    </div>
+    {% endif %}
+    {% endfor %}
+{% endif %}
 <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
 <form method="post">
-  {% csrf_token %}
-      {{ form.as_p }}
-<!--  <input type="text" class="form-control" placeholder="Login" required>-->
-<!--  <input type="email" class="form-control" placeholder="Email" required autofocus>-->
-<!--  <input type="password" class="form-control" placeholder="Password" required>-->
-<!--  <input type="password" placeholder="Repeat Password" class="form-control" required>-->
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <!--  <input type="text" class="form-control" placeholder="Login" required>-->
+    <!--  <input type="email" class="form-control" placeholder="Email" required autofocus>-->
+    <!--  <input type="password" class="form-control" placeholder="Password" required>-->
+    <!--  <input type="password" placeholder="Repeat Password" class="form-control" required>-->
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
 </form>
 
-<!--{% endblock %}-->
+{% endblock %}
