--- a/general/templates/general/base.html
+++ b/general/templates/general/base.html
@@ -14,14 +14,16 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">TaskManager</h5>
     <nav class="my-2 my-md-0 mr-md-3">
+        {% if request.user.is_authenticated %}
         <a class="p-2 text-dark" href="{% url 'home' %}">Главная</a>
         <a class="p-2 text-dark" href="{% url 'tasks_all' %}">Задачи</a>
         <a class="p-2 text-dark" href="{% url 'create' %}">Создать</a>
-        <!--        <a class="p-2 text-dark" href="#">Выход</a>-->
+        {% endif %}
     </nav>
     {% if request.user.is_authenticated %}
-    <h3>{{ user.username }}</h3>|<a class="btn btn-outline-primary" href="{% url 'user_logout' %}">Выйти</a>
+    <h4>{{ user.username }} |  </h4><a class="btn btn-outline-primary mr-2" href="{% url 'user_logout' %}">Выйти</a>
     {% else %}
+    <a class="btn btn-outline-primary mr-2" href="{% url 'registration' %}">Регистрация</a>
     <a class="btn btn-outline-primary" href="{% url 'auth_user' %}">Войти</a>
     {% endif %}
 
